Fin ex01(qlq test a verifier)

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -2,9 +2,11 @@ NAME =	phonebook
 CPP =	c++
 FLAGS =	-Wall -Wextra -Werror -g -std=c++98
 RM =	rm -rf
+
 SRCS =	Contact.cpp	\
 		main.cpp	\
-
+		PhoneBook.cpp \
+		
 OBJS = $(SRCS:.cpp=.o)
 
 .c.o:
