--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,22 +1,36 @@
-NAME = megaphone
-CPP = c++
-FLAGS = -Wall -Wextra -Werror -g -std=c++98
-RM = rm -rf
-SRCS = megaphone.cpp
+NAME        =   megaphone
 
-OBJS = $(SRCS:%.cpp=%.o)
+CC          =   c++
 
-all: $(NAME)
+FLAG        =   -std=c++98 -Wall -Wextra -Werror -pedantic -g3
 
-$(NAME): $(OBJS)
-	@$(CPP) $(CXXFLAGS) -o $(NAME) $(OBJS)
-                                                        
+C_FILES     =   main.cpp megaphone.cpp
+
+OBJ_DIR     =   builds
+
+OBJS        =   $(addprefix $(OBJ_DIR)/, $(C_FILES:.cpp=.o))
+
+DEPS        =   $(OBJS:.o=.d)
+
+all:        $(NAME)
+
+$(OBJ_DIR):
+	@mkdir -p $(OBJ_DIR)
+
+$(OBJ_DIR)/%.o: %.cpp | $(OBJ_DIR)
+	$(CC) $(FLAG) -MMD -MP -c $< -o $@
+
+$(NAME):    $(OBJS)
+	$(CC) $(OBJS) -o $(NAME)
+
 clean:
-	@$(RM) $(OBJS) $(NAME)
+	rm -f $(OBJ_DIR)/*.o $(DEPS) rm -rf $(OBJ_DIR)
 
-fclean: clean
-	@$(RM) $(OBJS) $(NAME)
+fclean:    clean
+	rm -f $(NAME)
 
-re: fclean all
+re:    fclean all
 
-.PHONY: all clean fclean re
+-include $(DEPS)
+
+.PHONY:    all clean fclean re
